Edited wiki page through web user interface.

--- a/wiki/HowToInstall.wiki
+++ b/wiki/HowToInstall.wiki
@@ -4,6 +4,7 @@
 ==安装指南==
  # 下载程序，如果需要的话先在本地编辑好
  # 上传程序文件到服务器
+ # 最好设置文件所在文件夹及文件的权限为777（否则无法防止重复锐推）
  # 在服务器的控制面板上设置好Cron Jobs(Linux)或者计划任务(Windows)
 
 ===【参考】使用cPanel的空间的Cron Job设置方法===
