Edited wiki page through web user interface.

--- a/wiki/HowToInstall.wiki
+++ b/wiki/HowToInstall.wiki
@@ -2,7 +2,10 @@
 #labels Featured
 
 ==安装指南==
- # 下载程序，如果需要的话先在本地编辑好
+ # 下载程序
+ # 在本地编辑work.php（修改头部的机器人账户设定）
+ # 如果需要，再按照 HowToEdit 页进行修改
+ # 保存文件（编码为无BOM签名的UTF-8）
  # 上传程序文件到服务器
  # 最好设置文件所在文件夹及文件的权限为777（否则无法防止重复锐推）
  # 在服务器的控制面板上设置好Cron Jobs(Linux)或者计划任务(Windows)
