--- a/wiki/HowToInstall.wiki
+++ b/wiki/HowToInstall.wiki
@@ -3,8 +3,9 @@
 
 ==安装指南==
  # 下载程序
- # 在本地编辑work.php（修改头部的机器人账户设定）
- # 如果需要，再按照 HowToEdit 页进行修改
+ # 编写或下载oAuth发推的东西（可以按照 HowToEdit 页进行修改）
+ # <del>在本地编辑work.php（修改头部的机器人账户设定）</del>
+ # 如果需要，再按照 HowToEdit 页进行更多修改
  # 保存文件（编码为无BOM签名的UTF-8）
  # 上传程序文件到服务器
  # 最好设置文件所在文件夹及文件的权限为777（否则无法防止重复锐推）
